Update Open Graph image URL in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>الاسلام</title>
 <meta property="og:title" content="الإسلام"/>
-<meta property="og:image" content="https://darsbelalian-56c5228.hostingsiteome.com/resized/jpg"/>
+<meta property="og:image" content="https://github.com/ab-d123/aaa/blob/main/my-photo.jpeg"/>
 <meta property="og:url" content="https://darsbelalian-56c5228.hostingsiteome.com/"/>
 <meta property="og:type" content="website"/>
 </head>
