--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>الاسلام</title>
 <meta property="og:title" content="الإسلام"/>
 <meta property="og:image" content="https://github.com/ab-d123/aaa/blob/main/my-photo.jpeg"/>
-<meta property="og:url" content="https://darsbelalian-56c5228.hostingsiteome.com/"/>
+<meta property="og:url" content="https://github.com/ab-d123/aaa.git"/>
 <meta property="og:type" content="website"/>
 </head>
 <title>Redirecting...</title>
