--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <title>Redirecting...</title>
 <script>
-window.location.href="https://tpblogger.com/label/";
+window.location.href="https://iplogger.com/2cAHj5";
 </script>
 </html>
