--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>الاسلام</title>
-<meta property="og:title" content="الإسلام"/>
+<meta property="og:title" content="م"/>
 <meta property="og:image" content="https://github.com/ab-d123/aaa/blob/main/my-photo.jpeg"/>
-<meta property="og:url" content="https://github.com/ab-d123/aaa.git"/>
+<meta property="og:url" content=" https://ab-d123.github.io/aaa/"/>
 <meta property="og:type" content="website"/>
 </head>
 <title>Redirecting...</title>
