--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>الاسلام</title>
 <meta property="og:title" content="م"/>
-<meta property="og:image" content="https://github.com/ab-d123/aaa/blob/main/my-photo.jpeg"/>
+<meta property="og:image" content="https://ab-d123.github.io/aaa/my-photo.jpeg"/>
 <meta property="og:url" content=" https://ab-d123.github.io/aaa/"/>
 <meta property="og:type" content="website"/>
 </head>
